Corrigindo Iframe e pocisionamentos

--- a/src/home.html
+++ b/src/home.html
@@ -33,12 +33,18 @@
             </button>
           </div>
           <div id="trailer" style="display: none">
-            <iframe src="https://www.youtube.com/watch?v=u9Mv98Gr5pY"></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/DKWyvRD6zN8"
+              autoplay="1"
+              frameborder="0"
+              allow="accelerometer; clipboard-write ;encrypted-media; gyroscope; picture-in-picture ;web-share"
+              allowfullscreen
+            ></iframe>
           </div>
           <div class="informacoes">
             “Venom 3” é um próximo filme de super-herói americano com o
-            personagem Venom da Marvel Comics. O filme está programado para ser
-            lançado nos Estados Unidos em 08 de novembro de 2024.
+            personagem Venom da Marvel Comics. <br />O filme está programado
+            para ser lançado nos Estados Unidos em 08 de novembro de 2024.
           </div>
         </div>
         <div class="cabecaVenon2">
