--- a/src/home.html
+++ b/src/home.html
@@ -28,7 +28,7 @@
         <div class="sinopse">
           <img id="logo" src="../img/venonLetreiro.png" alt="" />
           <div class="center">
-            <button class="glow-on-hover" onclick="Trailer()">
+            <button type="button" class="glow-on-hover" onclick="Trailer()">
               Assitir Trailer
             </button>
           </div>
@@ -39,6 +39,7 @@
               frameborder="0"
               allow="accelerometer; clipboard-write ;encrypted-media; gyroscope; picture-in-picture ;web-share"
               allowfullscreen
+              disablePictureInPicture
             ></iframe>
           </div>
           <div class="informacoes">
