--- a/src/home.html
+++ b/src/home.html
@@ -53,6 +53,6 @@
         </div>
       </div>
     </main>
-    <script src="../src/index.js"></script>
+    <script src="../src/home.js"></script>
   </body>
 </html>
