--- a/src/home.html
+++ b/src/home.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Venom 3</title>
   </head>
   <body>
     <main>
